# corgi-test

./: .clang-format  .clang-tidy  CMakeLists.txt  README.md  install.bat
.github/workflows/: Actions.yml  BuildRelease.yml
cmake/: Config.cmake.in  config.cmake.in
include/corgi/test/: test.h
test/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  TestA.cpp  TestB.cpp  main.cpp  test_throw.cpp
